# qemu-edi-demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  local-example.cmake  requirements.txt
app/: CMakeLists.txt
app/hw_runner/: CMakeLists.txt
app/hw_runner/src/: bootstrap.cpp
app/include/: HW.hpp
app/qemu_runner/: CMakeLists.txt
app/qemu_runner/src/: bootstrap.cpp
app/src/: main.cpp
cmake/: toolchain.cmake
cmake/Platform/: Embedded.cmake
host/: listener.py
libs/: CMakeLists.txt
libs/edi/: CMakeLists.txt
libs/gtest/: CMakeLists.txt
libs/opencm3/: CMakeLists.txt
libs/qemu_startup/: CMakeLists.txt
libs/qemu_startup/include/: ARMCM3.h
libs/qemu_startup/private/: arm.h  swi.h
libs/qemu_startup/src/: interrupt.S  interrupt.c  startup.c  startup_ARMCM3.S
unit_tests/: CMakeLists.txt  link.ld
unit_tests/src/: test.cpp
